# xiaozhi-esp32-server

./: .gitignore
main/xiaozhi-server/: .gitignore  CLAUDE.md  ReadMe.md  config.yaml  pyproject.toml
