[project]
name = "xiaozhi-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10, <3.13"
dependencies = [
    "aioconsole==0.8.2",
    "aiohttp==3.13.2",
    "aiohttp-cors==0.8.1",
    "baidu-aip==4.16.13",
    "bs4==0.0.2",
    "chardet==5.2.0",
    "cnlunar==0.2.0",
    "cozepy==0.20.0",
    "dashscope==1.25.2",
    "edge-tts==7.2.6",
    "funasr==1.2.7",
    "google-generativeai==0.8.5",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "loguru==0.7.3",
    "markitdown==0.1.3",
    "mcp==1.22.0",
    "mcp-proxy==0.10.0",
    "mem0ai==1.0.0",
    "modelscope==1.32.0",
    "numpy==1.26.4",
    "openai==2.8.1",
    "opuslib-next==1.1.5",
    "ormsgpack==1.12.0",
    "portalocker==3.2.0",
    "powermem>=0.3.1,<1.0",
    "psutil==7.1.3",
    "pydub==0.25.1",
    "pyjwt==2.10.1",
    "pysocks==1.7.1",
    "pyyml==0.0.2",
    "requests==2.32.5",
    "ruamel-yaml==0.18.16",
    "sherpa-onnx==1.12.29",
    "silero-vad==6.1.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "vosk==0.3.45; sys_platform != 'darwin'",
    "websockets==14.2",
]
